--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,27 +54,13 @@ jobs:
       - install_js
       - run:
           name: Tests fake browser
-          command: yarn test:coverage
+          command: yarn test --coverage
       - run:
           name: Check coverage generated
           command: |
             if ! [[ -s coverage/lcov.info ]]
             then
               exit 1
-            fi
-      - run:
-          name: material-ui-icons
-          command: |
-            # latest commit
-            LATEST_COMMIT=$(git rev-parse HEAD)
-            # latest commit where packages/material-ui-icons was changed
-            FOLDER_COMMIT=$(git log -1 --format=format:%H --full-diff packages/material-ui-icons)
-            if [ $FOLDER_COMMIT = $LATEST_COMMIT ]; then
-              echo "changes, let's run the tests"
-              yarn workspace @material-ui/icons build:typings
-              yarn workspace @material-ui/icons test:built-typings
-            else
-              echo "no changes"
             fi
       - run:
           name: Coverage
