config error fix

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
         paths:
         - ~/.cache/yarn/v4
   test_unit:
-    <<: *defaults
+    # <<: *defaults
     steps:
       - checkout
       - install_js
