--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test:coverage": "react-scripts test --watchAll --coverage",
+    "test:coverage": "react-scripts test --watchAll --coverage --forceExit --json --outputFile=test.json",
     "test:watch": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
