--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
         command: |
           yarn test:coverage
           q
-          if ! [[ -s test.json ]]
+          if ! [[ -s /test.json ]]
           then
             exit 1
           fi
