--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2
+orbs:
+  aws-s3: circleci/aws-s3@1.0.11
 jobs:
   checkout:
     docker:
@@ -34,6 +36,20 @@ jobs:
           then
             exit 1
           fi
+    - run:
+        name: Generate Build
+        command: yarn build
+      - aws-s3/sync:
+          from: build
+          to: 's3://gulaq-customer-ci-cd'
+          arguments: |
+            --acl public-read \
+            --cache-control "max-age=86400"
+          overwrite: true
+      - aws-s3/copy:
+          from: build/*
+          to: 's3://gulaq-customer-ci-cd'
+          arguments: '--dryrun'
 workflows:
   version: 2
   pipeline:
