--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,14 +39,14 @@ jobs:
     - run:
         name: Generate Build
         command: yarn build
-      - aws-s3/sync:
+        aws-s3/sync:
           from: build
           to: 's3://gulaq-customer-ci-cd'
           arguments: |
             --acl public-read \
             --cache-control "max-age=86400"
           overwrite: true
-      - aws-s3/copy:
+        aws-s3/copy:
           from: build/*
           to: 's3://gulaq-customer-ci-cd'
           arguments: '--dryrun'
