--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,9 @@ jobs:
     - aws-s3/sync:
         from: build
         to: 's3://gulaq-customer-ci-cd'
+        aws-access-key-id: AWS_ACCESS_KEY_ID
+        aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+        aws-region: AWS_REGION
         arguments: |
           --acl public-read \
           --cache-control "max-age=86400"
@@ -49,6 +52,9 @@ jobs:
     - aws-s3/copy:
         from: build/*
         to: 's3://gulaq-customer-ci-cd'
+        aws-access-key-id: AWS_ACCESS_KEY_ID
+        aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+        aws-region: AWS_REGION
         arguments: '--dryrun'
 workflows:
   version: 2
