--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   aws-s3: circleci/aws-s3@1.0.11
 jobs:
-  checkout:
+  build:
     docker:
     - image: circleci/node:8.15
     steps:
@@ -39,7 +39,30 @@ jobs:
     - run:
         name: Generate Build
         command: yarn build
-    - aws-s3/sync:
+  deploy-dev:
+    steps:
+      - checkout
+      - aws-s3/sync:
+        from: build
+        to: 's3://gulaq-customer-ci-cd'
+        arguments: |
+          --acl public-read \
+          --cache-control "max-age=86400"
+        overwrite: true
+  deploy-uat:
+    steps:
+      - checkout
+      - aws-s3/sync:
+        from: build
+        to: 's3://gulaq-customer-ci-cd'
+        arguments: |
+          --acl public-read \
+          --cache-control "max-age=86400"
+        overwrite: true
+  deploy-prod:
+    steps:
+      - checkout
+      - aws-s3/sync:
         from: build
         to: 's3://gulaq-customer-ci-cd'
         arguments: |
@@ -50,9 +73,31 @@ workflows:
   version: 2
   pipeline:
     jobs:
-    - checkout:
+    - build:
         filters:
           branches:
             ignore:
             - l10n
             - /dependabot\//
+    - deploy-dev:
+        requires:
+          - build
+        filters:
+          branches:
+            only:
+            - develop
+            - /feature-.*/
+    - deploy-uat:
+        requires:
+          - build
+        filters:
+          branches:
+            only:
+            - staging
+    - deploy-prod:
+        requires:
+          - build
+        filters:
+          branches:
+            only:
+            - master
